--- a/app/index.html
+++ b/app/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <h1>Olá sou uma Janela do Electron!</h1>
+
+    <a href="#" id="link-sobre">Sobre</a>
     <script src="./js/renderer.js"></script>
 </body>
 </html>
