--- a/app/sobre.html
+++ b/app/sobre.html
@@ -2,20 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/sobre.css">
     <title>Sobre o Alura Timer</title>
+    <link rel="stylesheet" href="css/sobre.css">
 </head>
 <body>
+
     <div class="container">
-        <img src="img/icon.png" alt="Logo do Alura Timer">
+        <img src="img/icon.png" alt="Logo do AluraTimer">
+        <p>O Alura timer é para voce guardar seus tempos de estudo na Alura.</p>
         <p>Versão: 1.0.0</p>
-        <p>O Alura timer é para você guardar seus tempos de estudos no Alura</p>
-        <p>Feita por <a href="#" id="link-github">Gabriel Óliver</a> </p>
-        <p>Versão do Electron: <span id="versao-electron"></span></p>
+        <p>Feito por <a href="#" id="link-github">Gabriel Óliver</a></p>
+        <p>Versão do Electron <span id="versao-electron"></span></p>
         <a href="#" id="link-fechar">Fechar</a>
+
     </div>
-    <script src="./js/sobre.js"></script>
+    <script src="js/sobre.js"></script>
 </body>
 </html>
